# datastore-sys

./: .gitignore  Cargo.toml  gen.sh
src/: datastore.rs  datastore_grpc.rs  entity.rs  latlng.rs  lib.rs  query.rs  struct_pb.rs  timestamp.rs  wrappers.rs
